# palantir-cordially

./: main.py  palantir.py  pyproject.toml  templating.py
